Nouvelle introduction, vue d'ensemble plus longue, publies reléguées en annexe

--- a/Manuscrit/BiblioKlein.bib
+++ b/Manuscrit/BiblioKlein.bib
@@ -7,6 +7,13 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@techreport{geist2013cascading,
+	Author = {Matthieu Geist and Edouard Klein and Yann Guermeur and Olivier Pietquin},
+	Date-Added = {2013-08-02 12:44:25 +0000},
+	Date-Modified = {2013-08-02 12:45:28 +0000},
+	Title = {Cascading and Merging Supervised Learning for Inverse Reinforcement Learning},
+	Year = {2013}}
+
 
 
 @techreport{bougrain2012inverse,
