--- a/Manuscrit/main.org
+++ b/Manuscrit/main.org
@@ -183,68 +183,27 @@ Pour des tâches complexes il est coûteux de réunir ces deux types d'expertise
 
 L'application de ce paradigme à des domaines dynamiques dont le modèle est inconnu et possiblement non linéaire nous pousse à choisir l'\gls{rl} comme méthode de recherche du contrôle optimal. L'apprentissage par renforcement permet de manière générique[fn::C'est-à-dire qu'un même algorithme peut être utilisé pour apprendre à gérer deux domaines complètement différents.] d'apprendre le contrôle optimal à partir d'un signal de récompense, information locale sur la qualité du contrôle, en exploitant l'information issue d'interactions avec le système. Nos contributions se situent donc dans le domaine de l'\gls{irl}, qui cherche à obtenir un signal de récompense cohérent avec une démonstration de la tâche que fournit un expert.
 
-** Contributions
-
-L'évaluation d'une méthode d'apprentissage par imitation peut se faire selon deux critères :
- - la nature et la quantité d'information qu'il faut lui donner pour qu'elle fonctionne;
- - la qualité du contrôle qu'elle offre, comparée à la qualité du contrôle de l'expert ayant effectué la démonstration.
-
-
-Les méthodes d'apprentissage numérique supervisé excellent quant au premier critère, elles ne nécessitent pour fonctionner que de disposer d'une base d'exemples du comportement expert. Les méthodes d'apprentissage par renforcement inverse de l'état de l'art ne sont pas aussi souples. Elles nécessitent[fn::Sauf une à notre connaissance, \gls{relent}, que nous utiliserons de fait comme point de comparaison.] pour fonctionner au moins un simulateur du système dynamique à contrôler. Les contributions de cette thèse visent à s'affranchir de ce besoin. Les méthodes d'\gls{irl} sont intrinsèquement plus difficile à utiliser en pratique que les méthodes d'imitation supervisée car après avoir trouvé une récompense, il faut l'optimiser pour obtenir une politique de contrôle. Nous verrons cependant que si l'on peut surmonter cette contrainte, alors les méthodes d'\gls{irl} que nous proposons ici présentent expérimentalement une meilleure capacité de généralisation que les méthodes supervisées.
-
-*** \glstext{lstdmu}
-
-La première contribution, l'algorithme \gls{lstdmu}, auquel le \autoref{hier-lstdmu} est consacré, permet d'estimer une grandeur centrale en \gls{irl}, l'attribut moyen, sans avoir à utiliser un simulateur du système :
-
- - Elle a donné lieu à une première communication dans un atelier d'IJCAI portant sur l'apprentissage machine grâce à des instructeurs humains :
-\fullcite{klein2011batch2}
- - Nous avons ensuite rencontré la communauté d'apprentissage francophone aux JFPDA :
-\fullcite{klein2011batch1}
- - Ces travaux ont donné lieu à une publication avec actes à la conférence EWRL, qui regroupe la communauté internationale d'apprentissage par renforcement.
- \fullcite{klein2011batch}
-
-*** \glstext{scirl}
-Vient ensuite le nouvel algorithme d'\gls{irl} \gls{scirl} que nous décrivons et étudions au \autoref{hier-scirl} et qui peut tirer parti des avancées offertes par \gls{lstdmu}. Grâce à une heuristique, il est capable de trouver une récompense à partir uniquement de données expertes.
-
-- Une version préliminaire de ces travaux a donné lieu à une communication sans actes à EWRL.
-\fullcite{klein2012structured3}
-- Nous avons par la suite présenté nos travaux à la communauté francophone à CAp.
-\fullcite{klein2012structured2}
-- Une version aboutie de ces travaux a été publiée à NIPS.
-\fullcite{klein2012structured}
-- Une version étendue de l'article présenté à CAp a été publiée dans la revue francophone RIA.
- \fullcite{klein2012structured1}
-
-*** \glstext{cascading}
-
-Notre dernière contribution majeure est l'algorithme \gls{cascading} (\autoref{hier-cascading}), il s'agit d'un autre algorithme d'\gls{irl} un peu plus souple que \gls{scirl}. Les deux algorithmes ont été développés en même temps, mais les publications concernant \gls{cascading} sont plus récentes.
-- L'algorithme a été présenté aux JFPDA cette année.
-\fullcite{klein2012cascading1}
-- Il sera également présenté à Prague à ECML/PKDD
-\fullcite{klein2012cascading}
-
-L'analyse théorique de \gls{cascading} est due à un autre doctorant de l'équipe MaLIS, Bilal Piot. Elle précède chronologiquement l'analyse de \gls{scirl}, qui s'en inspire.
-
-*** Autres travaux
-# <<hier:autrestravaux>>
-D'autres travaux, parallèles à ceux présentés ici, n'ont pas donné de résultats satisfaisants. Les résultats préliminaires avaient cependant donné lieu à une publication. L'idée est de réduire la dimension de l'espace d'hypothèses dans lequel on cherche une récompense en exploitant les transformations (translations, multiplications par un facteur positif) qu'il est possible, sur tout \gls{mdp}, d'appliquer à une récompense sans changer ses politiques optimales. Une modification de l'algorithme du simplexe permet, dans cet espace de dimension réduite, de trouver les récompenses creuses (différentes de zéro en seulement quelques points) expliquant le comportement de l'expert. Malheureusement l'existence de telles solutions n'est pas garantie et la complexité de l'algorithme croît exponentiellement avec le cardinal de l'espace d'état. \\
-\fullcite{klein2011dimentionality}
-
-Lors de la 8$^{\textrm{ème}}$ école d'été sur les interfaces multimodales (eNTERFACE'12), nous avons tenté d'appliquer l'\gls{irl} à un problème réel et de grande dimension : la commande d'un bras robot par le biais d'une interface cerveau/machine (/Brain Computer Interface/, BCI). En observant un oracle associer la sortie de la BCI (une fois filtrée) à un ordre (avancer, droite, gauche, etc.), le but est de trouver une récompense qui, une fois optimisée, permettrait à un agent de remplacer l'oracle. L'utilisation de l'\gls{rl} permettrait d'obtenir un agent s'améliorant au fur et à mesure que le nombre d'interactions augmente, et qui s'adapte à l'utilisateur. Les résultats ont été prometteurs, en ce sens que l'algorithme \gls{scirl} (que nous présentons au \autoref{hier-scirl}) a été en mesure de trouver une fonction de récompense. Nous avons cependant manqué de temps pour collecter les données nécessaires à l'optimisation de cette récompense, et n'avons de fait pas pu évaluer la qualité de la récompense fournie par \gls{scirl}.\\
-\fullcite{bougrain2012inverse}
-
 ** Vue d'ensemble du manuscrit
- Le \autoref{hier-formalisme} explore la problématique de l'apprentissage par imitation. Nous commençons par formaliser l'imitation par des méthodes supervisées, dont nous proposons un état de l'art, avant d'introduire le cadre des \gls{mdp} et de l'\gls{rl}, prérequis pour expliquer l'\gls{irl}. L'état de l'art de l'\gls{irl} est donné au \autoref{hier-etatdelart}.
+ Le *\autoref{hier-formalisme}* explore la problématique de l'apprentissage par imitation. Nous commençons par formaliser la notion de politique déterministe markovienne : à un état encodant toutes les données nécessaires à la prise d'une décision, l'agent associe de manière déterministe une action. Nous remarquons alors que le problème d'apprentissage supervisé d'une politique se réduit au problème bien connu de la classification multi-classe, les états étant les entrées à classifier et les actions étant les étiquettes à associer aux entrées. Nous définissons le risque empirique et le risque réel, qui mesurent l'erreur de classification respectivement sur les données dont nous disposons et sur la distribution sur laquelle il nous importe d'apprendre la politique experte. Nous nous attardons ensuite sur les paramétrisation linéaires, de grande importance pour nous car nous les utiliserons tout au long du manuscrit comme modèle d'approximation des fonctions de valeur, de score, de récompense et d'attribut moyen de l'expert. Nous proposons deux choix de fonction d'attributs génériques, que nous utiliserons dans nos expériences. Ces prolégomènes nous permettent d'étudier deux méthodes de classification, une méthode à marge structurée que nous retrouverons au \autoref{hier-scirl} lors de l'exposé de l'algorithme \gls{scirl} et les \gls{svm}, qui nous serons utiles au \autoref{hier-cascading} comme routine de l'algorithme \gls{cascading}.
 
-L'algorithme \gls{lstdmu} est exposé au \autoref{hier-lstdmu}. Nous y expliquons la méthode, considérons les implications théoriques et fournissons des résultat expérimentaux qui illustrent la qualité de l'estimation fournie.
+Après un état de l'art des méthodes d'imitation supervisée, nous définirons le cadre des \gls{mdp} dans lequel se situera le reste du manuscrit. La notion de dynamique temporelle, formalisée comme les probabilités de transition vers un état d'arrivée d'un agent choisissant une certaine action dans un état de départ, y est fondamentale. Elle permet de dépasser le cadre de la politique comme simple association état-action que manipulent les méthodes supervisées en introduisant des critères long terme sur la qualité d'une politique. La fonction de valeur, espérance de la somme pondérée d'une fonction de récompense (signal localisé sur la qualité du contrôle) permet d'ordonner les politiques. La recherche d'une politique optimale via la résolution des équations de Bellman est l'objet de la \gls{dp}. Nous nous intéresserons plutôt à l'\gls{rl}, qui résoud le même problème sans connaître explicitement les probabilités de transition, mais en intéragissant avec le système à contrôler. D'un intérêt particulier pour nous sont les algorithmes pouvant fonctionner à partir d'une base de données recueuillies une fois pour toutes (nous donnons l'exemple de /Fitted-Q/ \autoref{alg:fittedq} et \gls{lspi} \autoref{alg:lspi}), plus efficaces en échantillons que les algorithmes en ligne.
 
-Le \autoref{hier-scirl} est consacré à \gls{scirl}, un de nos deux nouveaux algorithmes d'\gls{irl}. Nous fournissons une preuve théorique de la validité de l'algorithme dans le cas général, et proposons une heuristique lui permettant de fonctionner en utilisant uniquement des données issues de la démonstration de l'expert. Nous illustrons empiriquement les bonnes performances de cet algorithme comparativement à une méthode supervisée et à \gls{relent}, une méthode récente d'\gls{irl}.
+L'\gls{rl} permet de trouver une politique optimale à partir d'information localisée sur la qualité du contrôle présentée sous la forme d'une fonction de récompense. Le problème inverse, l'\gls{irl}, consiste à trouver une fonction de récompense pour laquelle un comportement dont nous observons l'exemple est optimal. L'optimisation de ce signal par un algorithme d'\gls{rl} fournira une politique résolvant le problème de l'apprentissage par imitation. Nous fournissons deux critères de résolution du problème de l'\gls{irl} (équations \ref{eq:aricriterebis} et \ref{eq:aricritere}). L'un mesure l'optimalité de la politique d'imitation pour la récompense (normalement inconnue) optimisée par l'expert, l'autre mesure l'optimalité de l'expert pour la récompense trouvée par l'algorithme d'\gls{irl}. Enfin, nous terminerons le chaptire par la définition de l'attribut moyen. L'existence de cette grandeur découle de la paramétrisation linéaire de la fonction de récompense. Elle joue un rôle capital dans la plupart des approches de l'état de l'art, car deux politiques d'attributs moyen proches auront (pour toute récompense) des valeurs proches (\autoref{thm:closemuclosev}). 
 
-Finalement nous présentons notre deuxième algorithme d'\gls{irl}, \gls{cascading}, au \autoref{hier-cascading}. Nous reproduisons les résultats théoriques obtenus par Bilal Piot, chronologiquement antérieurs à ceux que nous fournissons pour \gls{scirl}. Nous offrons une autre heuristique qui permet à \gls{cascading} de fonctionner comme \gls{scirl} en utilisant uniquement des données issues de la démonstration de l'expert. Nous montrons qu'expérimentalement les performances de \gls{cascading} (dans sa version heuristique) sont légèrement supérieures à celles de \gls{scirl}. 
+L'état de l'art de l\gls{irl} constitue le *\autoref{hier-etatdelart}*. Nous justifions tout d'abord notre choix de considérer la fonction de récompense comme une fonction de l'espace joint état-action dans $\reals$, puis étudions les transformations qu'il est possible d'appliquer à une fonction de récompense sans modifier les politiques optimales associées (\gls{rewardshaping}). Nous ferons ensuite l'état de l'art de l'\gls{irl} proprement dit. La grande majorité des approches obéit à une structure commune que nous exposons \autoref{alg:repetee}. Dans cette approche itérative, la fonction de récompense est approximée selon un modèle linéaire. L'attribut moyen de la politique optimale pour la récompense courante est comparé à l'attribut moyen de l'expert. Le vecteur de paramètres de la fonction de récompense est ensuite mis à jour afin de faire diminuer la distance entre ces deux attributs moyens. Les algorithmes suivant ce schéma diffèrent par la définition de la distance entre deux attributs moyens et par la règle de mise à jour. Toutes ces approchent souffrent des problèmes intrinsèquement liés à leur structure itérative. Il faut de manière répétée résoudre un \gls{mdp}, c'est-à-dire trouver la politique optimale pour une récompense arbitraire, puis estimer l'attribut moyen de cette politique optimale. Ces deux étapes sont gourmandes en données et en temps de calcul. Plus récemment, de nouvelles approches ce sont détachées de cette structure itérative. Certaines abandonnent également l'approximation linéaire de la fonction de récompense, la remplaçant par exemple par des \gls{gp}. La plupart de ces nouvelles approches nécessitent cependant pour fonctionner au moins autant d'information que les approches itératives précédentes. L'une d'entre elle cependant, \gls{relent} (\autoref{alg:relent}) est particulièrement peu gourmande en données. Elle ne réclame dans sa version échantillonnée qu'une base d'exemples de l'expert et des échantillons tirés par une politique aléatoire, couvrant tout l'espace d'état. De ce fait, elle nous servira de point de comparaison aux chapitres \ref{hier-scirl} et \ref{hier-cascading} lorsque nous testerons nos nouveaux algorithmes d'\gls{irl} sur des problèmes jouet.
 
-Le \autoref{hier-conclusion} résume les contributions apportées et propose des perspectives de recherche qu'il serait intéressant d'explorer pour étendre nos travaux ou profiter des opportunités qu'ils ont ouvert.
+Le *\autoref{hier-lstdmu}* décrit notre première contribution, l'algorithme \gls{lstdmu}. Nous commençons par rappeler la définition de l'attribut moyen et constatons que, composante par composante, l'attribut moyen est une fonction de valeur (avec pour récompense la composante correspondante du vecteur d'attribut). Pour remplacer la méthode usuelle de calcul de l'attribut moyen (une estimation de Monte-Carlo, \autoref{alg:mcmu}) nous nous proposons d'exploiter le constat que nous venons de faire. Non pas en utilisant les outils de la \gls{dp} (\autoref{alg:dpmu}), qui nécessitent de connaître les probabilités de transition, mais en adaptant un algorithme d'estimation de la fonction de valeur bien connu en \gls{rl}, \gls{lstd}. L'algorithme obtenu, \gls{lstdmu}, est une généralisation vectorielle de \gls{lstd}-$Q$. La complexité algorithmique asymptotique des deux algorithmes est la même car l'opération coûteuse, une inversion de matrice, n'a besoin d'être effectuée qu'une seule fois pour toutes les composantes de l'attribut moyen. Nous adaptons les résultats théoriques disponibles sur \gls{lstd} à \gls{lstdmu}. Nous plaçons ensuite cette contribution dans le cadre des approches d'\gls{irl} itératives dont la structure a été isolée au chapitre précédent. Les algorithmes d'\gls{rl} tels \gls{lspi} permettant de résoudre un \gls{mdp} grâce à une base de données recueillie à l'avance, nous pouvons maintenant grâce à \gls{lstdmu}, qui peut estimer l'attribut moyen d'une politique arbitraire grâce à cette même base de données, faire fonctionner ce type d'algorithmes d'\gls{irl} de manière \gls{batch} et \gls{offpolicy}. Ce mode de fonctionnement nous permet d'espérer les appliquer à des problèmes où le modèle dynamique du système n'est pas disponible. Nous validons empiriquement notre démarche sur le problème jouet du pendule inversé, et constatons que l'estimation fournie par \gls{lstdmu} permet à un algorithme d'\gls{irl} itératif d'atteindre les mêmes performances que lorsqu'il utilise l'estimation de l'attribut moyen fournie par un oracle ayant accès à un simulateur du système. La source d'erreurs se situe donc au niveau de la résolution du \gls{mdp} à chaque itération. Il apparaît important de définir des algorithmes d'\gls{irl} ne nécessitant pas une telle résolution répétée.
+
+Nous proposons un tel algorithme au *\autoref{hier-scirl}*. Rappelant les notions vues aux chapitres \ref{hier-formalisme} et \ref{hier-etatdelart}, nous établissons un parallèle entre la fonction de score d'un classifieur et la fonction de qualité de l'expert. Pour trouver l'action (l'étiquette) à associer à un état (une entrée), les classifieurs à fonction de score choisissent l'action qui associée à l'état obtient le score le plus haut. L'expert mettant en œuvre un politique optimale, il va utiliser le même mécanisme glouton de sélection d'action, non pas sur une fonction de score mais sur la fonction de qualité de sa politique. Grâce à la paramétrisation linéaire de la fonction de récompense (objet de la recherche menée par les algorithmes d'\gls{irl}), cette fonction de qualité peut s'exprimer comme le produit scalaire du vecteur de paramètres de la récompense et de l'attribut moyen de l'expert. Il est dont naturel d'utiliser également pour la fonction de score du classifieur une paramétrisation linéaire mettant en jeu l'attribut moyen de l'expert. Le principe de \gls{scirl}, le nouvel algorithme d'\gls{irl} que nous proposons, est simplement d'apprendre directement la fonction de récompense grâce à un classifieur à fonction de score linéaire. Il suffit d'utiliser l'attribut moyen de l'expert dans la paramétrisation linéaire. L'algorithme de classification structurée étudié au début du manuscrit se prête bien à cette tâche. Nous proposons de plus une heuristique qui, en conjonction avec une méthode \gls{onpolicy} d'estimation de l'attribut moyen de l'expert (comme par exemple l'algorithme \gls{lstdmu} du chapitre précédent[fn::\gls{lstdmu} peut en effet fonctionner, comme \gls{lstd}, au choix en mode \gls{onpolicy} ou \gls{offpolicy}.]), permet d'utiliser \gls{scirl} uniquement à partir de données échantillonnées par l'expert, ce qu'à notre connaissance aucun autre algorithme d'\gls{irl} ne peut faire sur un problème non trivial.
+
+Nous fournissons \autoref{thm:scirl} une borne théorique sur les performances de \gls{scirl}. Cette borne garantit que lorsque l'erreur d'estimation de l'attribut moyen de l'expert et l'erreur de classification sont faibles, alors la politique de l'expert est optimale pour la récompense trouvée par \gls{scirl}, ce qui est un des critères de réussite exprimés au \autoref{hier-formalisme}. Le \autoref{thm:coroscirl} laisse espérer que \gls{scirl} évite les solutions dégénérées au problème de l'\gls{irl}. Les performances de \gls{scirl} vis-à-vis du second critère de réussite du \autoref{hier-formalisme} font l'objet d'une étude empirique. Notre instanciation de \gls{scirl}, avec l'algorithme de classification structurée discuté plus tôt aidé de l'heuristique permettant le fonctionnement à partir de données expertes seules, est testée sur les problèmes jouet du \gls{mountaincar} et du \gls{highway}. Sur le premier, \gls{scirl} obtient des résultats signicativement meilleurs que ceux de \gls{relent} et ceux d'un algorithme d'imitation supervisée. Sur le second, les deux approches d'\gls{irl} montrent de meilleures performances que la classification, et \gls{scirl} reste légèrement meilleur que \gls{relent}.
+
+Basé sur le même constat de proximité entre fonction de score d'un classifieur et la fonction de qualité de l'expert, l'algorithme \gls{cascading} fait l'objet du *\autoref{hier-cascading}*. Plutôt que d'introduire la structure temporelle du \gls{mdp} par le biais de l'attribut moyen de l'expert, nous utilisons une version échantillonnée de l'équation de Bellman, où la fonction de qualité de l'expert est remplacée par la fonction de score d'un classifieur entraîné sur les données expertes. La classification intervient ici comme sous routine. Elle est la première étape d'une cascade. La seconde est une étape de régression où l'équation de Bellman permet d'obtenir des points de données grâce auquel un régresseur apprend la fonction de récompense. Une nouvelle heuristique est proposée. En utilisant cette heuristique il est possible de définir les points de données fournis à l'étape de régression uniquement à partir de données expertes. Nous reproduisons \autoref{thm:csi} les résultats théoriques obtenus par un autre doctorant de l'équipe MaLIS. Si l'erreur de classification et l'erreur de régression sont faibles, alors la politique de l'expert est quasi-optimale pour la récompense trouvée par \gls{cascading}. L'autre critère, à savoir l'optimalité vis-à-vis de la récompense de l'expert[fn::normalement inconnue, mais nous travaillons sur des problèmes jouet] de l'agent entraîné sur la récompense trouvée par \gls{cascading} est là aussi l'objet d'une étude expérimentale sur les mêmes problèmes jouets que pour \gls{scirl}. La classification ayant été dépassée par les méthodes d'\gls{irl}, nous ne gardons dans cette étude que \gls{relent} comme point de comparaison. Les performances de \gls{cascading} sont sensiblement équivalentes à celles de \gls{scirl}, un test d'égalité des moyennes montre qu'elles sont par endroit légèrement supérieures.
+
+
+Le *\autoref{hier-conclusion}* résume les contributions apportées et propose des perspectives de recherche qu'il serait intéressant de poursuivre, l'étude de certaines ayant été entamée sans avoir pu être mené à terme dans le cadre de cette thèse. Il serait notamment utile de renforcer l'étude empirique de nos deux nouveaux algorithmes d'\gls{irl} en les appliquant à des problèmes réels. Les difficultés rencontrées lors des travaux préliminaires en ce sens (voir la \autoref{hier-autrestravaux}) sont liées à l'optimisation de la récompense trouvée par les algorithmes d'\gls{irl} et non à la recherche de la récompense elle-même. Une solution à ce problème serait le développement d'algorithmes d'\gls{irl} fournissant une politique de contrôle et non simplement une récompense.
  
-Les deux annexes regroupent pour l'\autoref{hier-demo} la preuve des principaux résultats théoriques et pour l'\autoref{hier-jouets} une description des problèmes jouets sur lesquels nous évaluons empiriquement les nouvelles méthodes que nous proposons.
+Les trois annexes regroupent pour l'*\autoref{hier-demo}* la preuve des principaux résultats théoriques, pour l'*\autoref{hier-jouets}* une description des problèmes jouets sur lesquels nous évaluons empiriquement les nouvelles méthodes que nous proposons et pour l'*\autoref{hier-contributions}* une liste des publications et communications auxquelles cette thèse a donné lieu.
 * Apprentissage par imitation
 # <<hier:formalisme>>
   L'\gls{irl} permet de transformer l'apprentissage de tâches complexes à partir d'un signal de récompense en apprentissage par imitation, en déduisant de démonstrations d'un expert un signal de récompense cohérent avec ces démonstrations. Ce chapitre formalise les notions qui nous seront utiles tout au long du manuscrit. Nous commençons par étudier l'apprentissage supervisé, du point de vue de l'apprentissage par imitation. Ces méthodes ne passent pas par une fonction de récompense, mais apprennent directement l'association que fait l'expert entre entrées sensorielles et actions sur l'environnement. Nous en présentons un état de l'art. Nous précisons ensuite le cadre de l'\gls{rl}, puis de l'\gls{irl}, dont nous ferons l'état de l'art au \autoref{hier-etatdelart}.
@@ -1970,8 +1929,8 @@ Taille de la base experte & $p$-valeur\\
    La souplesse offerte par la liberté de choix des deux approches supervisées laisse à l'opérateur la possibilité d'adapter l'approche au problème qu'il cherche à résoudre. Une heuristique est offerte qui permet à \gls{cascading} de fonctionner avec une expertise humaine minimale en n'utilisant que des données expertes. Cela est illustré sur les mêmes bancs d'essai que ceux qui ont permis la validation empirique de \gls{scirl}. Les performances empiriques offertes par \gls{cascading} sont légèrement supérieures à celles de \gls{scirl}. Les deux approches sont plus performantes que l'approche supervisée au prix cependant de devoir résoudre le \gls{mdp} une fois la récompense obtenue.
 
 * Conclusions et perspectives
-** Rappel des contributions 
 # <<hier:conclusion>>
+** Rappel des contributions 
 L'un des freins à l'adoption généralisée de la robotique dans la société est le coût élevé des dispositifs automatiques. Du fait de l'augmentation exponentielle des capacités techniques du matériel, le goulot d'étranglement se situe de plus en plus au niveau du coût de conception des systèmes intelligents. Le développement d'algorithmes génériques pouvant s'adapter à une vaste gamme de problèmes est l'un des moyens par lesquels la réduction de ces coûts de développement pourrait être réalisée.
 
 L'\gls{rl} est un cadre de travail offrant de tels algorithmes. Malheureusement, ils nécessitent pour fonctionner une description formelle de la tâche qu'ils doivent accomplir sous la forme d'une fonction de récompense. La conception d'une bonne fonction de récompense est un problème non trivial nécessitant des réglages fins de la part de l'opérateur.
@@ -2289,7 +2248,60 @@ Contrairement au problème du \gls{mountaincar}, l'espace d'état est de dimensi
 \label{fig:highwayscreenshot}
 \end{figure}
 # %  Justement, on aimerait faire des trucs plus couillus
+
+* Contributions
+# <<hier:contributions>>
+
+L'évaluation d'une méthode d'apprentissage par imitation peut se faire selon deux critères :
+ - la nature et la quantité d'information qu'il faut lui donner pour qu'elle fonctionne;
+ - la qualité du contrôle qu'elle offre, comparée à la qualité du contrôle de l'expert ayant effectué la démonstration.
+
+
+Les méthodes d'apprentissage numérique supervisé excellent quant au premier critère, elles ne nécessitent pour fonctionner que de disposer d'une base d'exemples du comportement expert. Les méthodes d'apprentissage par renforcement inverse de l'état de l'art ne sont pas aussi souples. Elles nécessitent[fn::Sauf une à notre connaissance, \gls{relent}, que nous utiliserons de fait comme point de comparaison.] pour fonctionner au moins un simulateur du système dynamique à contrôler. Les contributions de cette thèse visent à s'affranchir de ce besoin. Les méthodes d'\gls{irl} sont intrinsèquement plus difficile à utiliser en pratique que les méthodes d'imitation supervisée car après avoir trouvé une récompense, il faut l'optimiser pour obtenir une politique de contrôle. Nous verrons cependant que si l'on peut surmonter cette contrainte, alors les méthodes d'\gls{irl} que nous proposons ici présentent expérimentalement une meilleure capacité de généralisation que les méthodes supervisées.
+
+** \glstext{lstdmu}
+
+La première contribution, l'algorithme \gls{lstdmu}, auquel le \autoref{hier-lstdmu} est consacré, permet d'estimer une grandeur centrale en \gls{irl}, l'attribut moyen, sans avoir à utiliser un simulateur du système :
+
+ - Elle a donné lieu à une première communication dans un atelier d'IJCAI portant sur l'apprentissage machine grâce à des instructeurs humains :
+\fullcite{klein2011batch2}
+ - Nous avons ensuite rencontré la communauté d'apprentissage francophone aux JFPDA :
+\fullcite{klein2011batch1}
+ - Ces travaux ont donné lieu à une publication avec actes à la conférence EWRL, qui regroupe la communauté internationale d'apprentissage par renforcement.
+ \fullcite{klein2011batch}
+
+** \glstext{scirl}
+Vient ensuite le nouvel algorithme d'\gls{irl} \gls{scirl} que nous décrivons et étudions au \autoref{hier-scirl} et qui peut tirer parti des avancées offertes par \gls{lstdmu}. Grâce à une heuristique, il est capable de trouver une récompense à partir uniquement de données expertes.
+
+- Une version préliminaire de ces travaux a donné lieu à une communication sans actes à EWRL.
+\fullcite{klein2012structured3}
+- Nous avons par la suite présenté nos travaux à la communauté francophone à CAp.
+\fullcite{klein2012structured2}
+- Une version aboutie de ces travaux a été publiée à NIPS.
+\fullcite{klein2012structured}
+- Une version étendue de l'article présenté à CAp a été publiée dans la revue francophone RIA.
+ \fullcite{klein2012structured1}
+
+** \glstext{cascading}
+
+Notre dernière contribution majeure est l'algorithme \gls{cascading} (\autoref{hier-cascading}), il s'agit d'un autre algorithme d'\gls{irl} un peu plus souple que \gls{scirl}. Les deux algorithmes ont été développés en même temps, mais les publications concernant \gls{cascading} sont plus récentes.
+- L'algorithme a été présenté aux JFPDA cette année.
+\fullcite{klein2012cascading1}
+- Il sera également présenté à Prague à ECML/PKDD
+\fullcite{klein2012cascading}
+
+L'analyse théorique de \gls{cascading} est due à un autre doctorant de l'équipe MaLIS, Bilal Piot. Elle précède chronologiquement l'analyse de \gls{scirl}, qui s'en inspire.
+
+** Autres travaux
+# <<hier:autrestravaux>>
+D'autres travaux, parallèles à ceux présentés ici, n'ont pas donné de résultats satisfaisants. Les résultats préliminaires avaient cependant donné lieu à une publication. L'idée est de réduire la dimension de l'espace d'hypothèses dans lequel on cherche une récompense en exploitant les transformations (translations, multiplications par un facteur positif) qu'il est possible, sur tout \gls{mdp}, d'appliquer à une récompense sans changer ses politiques optimales. Une modification de l'algorithme du simplexe permet, dans cet espace de dimension réduite, de trouver les récompenses creuses (différentes de zéro en seulement quelques points) expliquant le comportement de l'expert. Malheureusement l'existence de telles solutions n'est pas garantie et la complexité de l'algorithme croît exponentiellement avec le cardinal de l'espace d'état. \\
+\fullcite{klein2011dimentionality}
+
+Lors de la 8$^{\textrm{ème}}$ école d'été sur les interfaces multimodales (eNTERFACE'12), nous avons tenté d'appliquer l'\gls{irl} à un problème réel et de grande dimension : la commande d'un bras robot par le biais d'une interface cerveau/machine (/Brain Computer Interface/, BCI). En observant un oracle associer la sortie de la BCI (une fois filtrée) à un ordre (avancer, droite, gauche, etc.), le but est de trouver une récompense qui, une fois optimisée, permettrait à un agent de remplacer l'oracle. L'utilisation de l'\gls{rl} permettrait d'obtenir un agent s'améliorant au fur et à mesure que le nombre d'interactions augmente, et qui s'adapte à l'utilisateur. Les résultats ont été prometteurs, en ce sens que l'algorithme \gls{scirl} (que nous présentons au \autoref{hier-scirl}) a été en mesure de trouver une fonction de récompense. Nous avons cependant manqué de temps pour collecter les données nécessaires à l'optimisation de cette récompense, et n'avons de fait pas pu évaluer la qualité de la récompense fournie par \gls{scirl}.\\
+\fullcite{bougrain2012inverse}
+
 # % \bibliographystyle{myplainnat}
 \begin{fullwidth}
 \printbibliography
 \end{fullwidth}
+
